Fix to configure max heap size of Winery JMV (#108)
Using an environment variable which can be set when the container is started (default: `ENV WINERY_HEAP_MAX=2048m`).